# brandtruth-ai

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.worker  IMPLEMENTATION_PLAN.md  Makefile  PRODUCTION_TRACKER.md  README.md  SESSION_SUMMARY_2025-12-18.md  api_server.py  brand_profile_careerfied.json  docker-compose.temporal.yml  docker-compose.yml  modal_app.py  pyproject.toml  pytest.ini  requirements.txt  run_local.py  run_pipeline.py  run_tests.py  test_setup.py
.github/workflows/: deploy.yml
docs/: ARCHITECTURE.md  DECISIONS.md  ENTERPRISE_AUDIT.md  INDEX.md  MARKET_ANALYSIS.md  PRD.md  SLICES.md  TESTING.md  TRACKER.md
frontend/: .gitignore  Dockerfile  README.md  jest.config.js  jest.setup.ts  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  verify-studio.sh
frontend/__tests__/: dashboard.test.tsx  landing-page.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ApiStatusBanner.tsx  DraftIndicator.tsx  QueueStatus.tsx  ToolsNav.tsx  WorkflowProgress.tsx
frontend/e2e/: auth.setup.ts  campaigns.spec.ts  dashboard.spec.ts  features.spec.ts  health.api.spec.ts  landing.spec.ts  public.noauth.spec.ts  studio.spec.ts  user-flows.spec.ts
frontend/lib/: auth.ts  db.ts
frontend/prisma/: schema.prisma
frontend/stores/: api-status.ts  campaign.ts  draft.ts  index.ts  pipeline-queue.ts
scripts/: validate_temporal_contracts.py
src/: __init__.py
temporal-config/: development-sql.yaml
tests/: conftest.py
(+196 files in other folders)
